--- a/raon-control/schedule.html
+++ b/raon-control/schedule.html
@@ -1093,7 +1093,7 @@
 
         var server = "http://192.168.0.105/schedule/" + today.getFullYear() + '-' + monthString[today.getMonth()];
         console.log(server);
-        xhttp.open("GET", server, false);
+        xhttp.open("GET", server, true);
         xhttp.send();
     }
 </script>
