--- a/raon-control/test/fileUpload.html
+++ b/raon-control/test/fileUpload.html
@@ -118,6 +118,7 @@
 <script>
     function setInventoryData() {
         var formData = new FormData(document.forms.namedItem("fileInfo"));
+        formData.append('reference', '19830619');
 
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
@@ -136,7 +137,7 @@
             }
         };
 
-        var rName = "http://192.168.68.126:8080/inventory/insert";
+        var rName = "http://192.168.0.105:8080/inventory/update";
         xhttp.open("POST", rName, false);
         xhttp.send(formData);
     }
