notosans font, no image

--- a/raon-control/asset.html
+++ b/raon-control/asset.html
@@ -8,39 +8,25 @@
 	.swiper-slide {
 		background-position: center;
 		background-size: cover;
-		width: 600px;
+		width: 640px;
 		height: 400px;
 		/* background-color: #fff; */
 		box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
+		/* opacity: 0.5; */
 		/* filter: blur(4px); */
 		/* background: #d1ebff; */
 		border-radius: 10px;
 	}
 
-	/* .swiper-slide-active {
-		filter: blur(0px);
-		background: #fff;
-	} */
+	.swiper-slide-active .asset-container {
+		background-color: rgba(0, 0, 0, 0.3);
+		/* filter: blur(0px); */
+		/* background: #fff; */
+	}
 
 	.swiper-container-3d .swiper-slide-shadow-left,
 	.swiper-container-3d .swiper-slide-shadow-right {
 		background-image: none;
-	}
-
-	.swiper-pagination-bullet {
-		width: 20px;
-		height: 20px;
-		text-align: center;
-		line-height: 20px;
-		font-size: 12px;
-		color: #fff;
-		opacity: 1;
-		background: rgba(0, 0, 0, 0.2);
-	}
-
-	.swiper-pagination-bullet-active {
-		color: #fff;
-		background: #007aff;
 	}
 </style>
 
@@ -123,7 +109,7 @@
 		slidesPerView: '3',
 		coverflowEffect: {
 			rotate: 0,
-			stretch: -150,
+			stretch: -160,
 			depth: 200,
 			modifier: 2,
 			slideShadows: true,
@@ -136,8 +122,6 @@
 	});
 
 	function searchData() {
-		console.log(index);
-
 		var searchText = document.getElementById("input").value;
 		if (searchText.length) {
 			var assetNumber = document.getElementById('input').value;
@@ -148,10 +132,9 @@
 			else {
 				alert("No Result");
 			}
-
 		}
 		else {
-			alert("No PVs have been specified.");
+			alert("No Asset Number have been specified.");
 		}
 	}
 
@@ -161,6 +144,20 @@
 			event.preventDefault();
 			searchData();
 			// document.getElementById("button").click();
+		}
+	});
+
+	var slideMove = document.getElementsByClassName("swiper-container")[0];
+
+	document.addEventListener("keydown", function (event) {
+		console.log(event.keyCode);
+		switch (event.keyCode) {
+			case 37: // Arrow Left
+				swiper.slidePrev(500, false);
+				break;
+			case 39:
+				swiper.slideNext(500, false);
+				break;
 		}
 	});
 
@@ -182,7 +179,7 @@
 	function createSwiperSlide(jsonData) {
 		// var swiperWrapperClass = document.getElementsByClassName('swiper-wrapper');
 		var count = 0;
-		var nameDic = {'이상일':'SI', '최용준':'YJ', '김용학':'YH', '손창욱':'CW', '박미정':'MJ'};
+		var nameDic = { '이상일': 'SI', '최용준': 'YJ', '김용학': 'YH', '손창욱': 'CW', '박미정': 'MJ' };
 		var slideArray = [];
 
 		for (let i = 0; i < jsonData.length; i++) {
@@ -193,7 +190,13 @@
 
 			var assetImageElem = document.createElement('DIV');
 			assetImageElem.classList.add('asset-image');
-			assetImageElem.style.backgroundImage = 'url("' + imageServer + jsonData[i].id + '/' + jsonData[i].fileName + '")';
+
+			if( jsonData[i].fileName) {
+				assetImageElem.style.backgroundImage = 'url("' + imageServer + jsonData[i].id + '/' + jsonData[i].fileName + '")';
+			}
+			else {
+				assetImageElem.style.backgroundImage = 'url(images/noImage.svg)';
+			}
 
 			var assetContainerElem = document.createElement('DIV');
 			assetContainerElem.classList.add('asset-container');
@@ -230,7 +233,7 @@
 			// swiper.appendSlide(slideItemElem)
 			slideArray.push(slideItemElem.outerHTML);
 			// swiper.virtual.appendSlide(slideItemElem.outerHTML);
-			
+
 			// swiperWrapperClass[0].appendChild(slideItemElem);
 
 			index[jsonData[i].assetNum] = count;
