--- a/raon-control/test/swiper.html
+++ b/raon-control/test/swiper.html
@@ -25,13 +25,13 @@
         width: 100%;
         padding-top: 50px;
         padding-bottom: 50px;
-        background-color: brown;
+        /* background-color: brown; */
     }
 
     .swiper-slide {
         background-position: center;
         background-size: cover;
-        width: 300px;
+        width: 600px;
         /* height: 600px; */
         background-color: #fff;
         box-shadow: 0 15px 50px rgba(0,0,0,0.2);
@@ -112,11 +112,11 @@
         centeredSlides: true,
         slidesPerView: 'auto',
         coverflowEffect: {
-            rotate: 0,
-            stretch: 0,
-            depth: 100,
-            modifier: 2,
-            slideShadows: true,
+			rotate: 0,
+			stretch: -150,
+			depth: 200,
+			modifier: 2,
+			slideShadows: true,
         },
         // loop: true
     });
