--- a/raon-control/test/fileUpload.html
+++ b/raon-control/test/fileUpload.html
@@ -2,18 +2,32 @@
 <html>
 <style>
     #form-container {
-        /* display: none; */
+        display: none;
         position: fixed;
-        z-index: 1;
+        /* Stay in place */
         left: 0;
         top: 0;
+        z-index: 1;
         width: 100%;
         height: 100%;
-        overflow: auto;
-        background-color: rgb(0, 0, 0);
         background-color: rgba(0, 0, 0, 0.4);
-        padding-top: 60px;
     }
+
+    #close {
+        position: absolute;
+        right: 25px;
+        top: 0;
+        color: #000;
+        font-size: 35px;
+        font-weight: bold;
+    }
+
+    #close:hover,
+    #close:focus {
+        color: red;
+        cursor: pointer;
+    }
+
 
     input[type=text],
     select {
@@ -42,6 +56,8 @@
     }
 
     #new-asset-container {
+        position: relative;
+        margin: auto;
         width: 400px;
         height: 500px;
         border-radius: 5px;
@@ -51,27 +67,30 @@
 </style>
 
 <body>
+    <h2>Modal Login Form</h2>
 
-    <button onclick="document.getElementById('form-container').style.display='block'" style="width:auto;">New</button>
+    <button onclick="document.getElementById('form-container').style.display='block'">New</button>
 
-    <form method=post name="fileInfo" enctype=multipart/form-data>
+    <div id="form-container">
+        <form method=post name="fileInfo" enctype=multipart/form-data>
 
-        <div id="form-container">
             <div id="new-asset-container">
+                <span onclick="document.getElementById('form-container').style.display='none'" id="close">&times;</span>
+
                 <label>Asset Number</label>
-                <input type="text" id="asset-number" placeholder="ex) 20130619" name="assetNumber" value=""
+                <input type="text" id="new-asset-number" placeholder="ex) 20130619" name="assetNumber" value=""
                     minlength="9" maxlength="9" onkeydown="if (event.keyCode == 13) { return false;}">
 
                 <label>Date</label>
-                <input type="text" id="asset-date" placeholder="ex) 2013-06-19" name="assetDate" value=""
+                <input type="text" id="new-asset-date" placeholder="ex) 2013-06-19" name="assetDate" value=""
                     onkeydown="if (event.keyCode == 13) { return false;}">
 
                 <label>Device Name</label>
-                <input type="text" id="device-name" placeholder="" name="assetName" value="" onkeydown="if
+                <input type="text" id="new-device-name" placeholder="" name="assetName" value="" onkeydown="if
                 (event.keyCode == 13) { return false;}">
 
                 <label>Manager</label>
-                <select id="asset-manager" name="assetManager">
+                <select id="new-asset-manager" name="assetManager">
                     <option>이상일</option>
                     <option>최용준</option>
                     <option>김용학</option>
@@ -80,7 +99,7 @@
                 </select>
 
                 <label>Location</label>
-                <select id="asset-location" name="assetLocation">
+                <select id="new-asset-location" name="assetLocation">
                     <option>중앙제어센터 1층 중앙제어실</option>
                     <option>중앙제어센터 1층 관람 및 회의실</option>
                     <option>중앙제어센터 1층 관람실</option>
@@ -106,13 +125,14 @@
                 </select>
 
                 <input type=file name=file>
-    </form>
-
-
-    <button id="save-button" onclick="setInventoryData()">Save</button>
+                <button id="save-button" onclick="setInventoryData()">Save</button>
+            </div>
+        </form>
+    </div>
+    <!-- 
     <button onclick="document.getElementById('form-container').style.display='none'">Cancel</button>
 
-    <div id="output"></div>
+    <div id="output"></div> -->
 </body>
 
 <script>
