--- a/raon-control/test/swiper.html
+++ b/raon-control/test/swiper.html
@@ -34,7 +34,7 @@
         width: 600px;
         /* height: 600px; */
         background-color: #fff;
-        box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+        box-shadow: 0 15px 50px rgba(0, 0, 0, 0.2);
         filter: blur(4px);
         background: #d1ebff;
         border-radius: 10px;
@@ -55,8 +55,8 @@
 
     }
 
-    .swiper-container-3d .swiper-slide-shadow-left, 
-    .swiper-container-3d .swiper-slide-shadow-right{
+    .swiper-container-3d .swiper-slide-shadow-left,
+    .swiper-container-3d .swiper-slide-shadow-right {
         background-image: none;
     }
 </style>
@@ -112,14 +112,29 @@
         centeredSlides: true,
         slidesPerView: 'auto',
         coverflowEffect: {
-			rotate: 0,
-			stretch: -150,
-			depth: 200,
-			modifier: 2,
-			slideShadows: true,
+            rotate: 0,
+            stretch: -150,
+            depth: 200,
+            modifier: 2,
+            slideShadows: true,
         },
         // loop: true
     });
+
+    var button = document.createElement('BUTTON');
+    button.addEventListener('click', function () {
+        testFun();
+    });
+    button.innerText = "Button";
+
+    var buttonHTML = '<button onclick="testFun()">button</button>'
+    document.getElementsByClassName('content')[0].innerHTML = buttonHTML;
+    
+    console.log(document.getElementsByClassName('content')[0]);
+
+    function testFun() {
+        console.log('aaaa');
+    }
 </script>
 
 </html>
